samples/_failures_safe/1761664028_476962_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa04da58.c: In function ‘main’:
./samples/SAFE/__tmp_fa04da58.c:155:9: error: expected declaration or statement at end of input
  155 |         fprintf(stderr, "Decompression verification failed\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_fa04da58.c:155:9: error: expected declaration or statement at end of input
